--- a/history
+++ b/history
@@ -1,1 +1,2 @@
 Il était une fois une fille dans un train qui écoutait de la musique. Tout d'un coup le train s'arrête, la fille se retourne et elle voit une camarade de sa classe, elles n'ont jamais parlé mais en attendant que le train se remette en route, elles commencent à faire connaissance, sans savoir une grande amitié allait nâitre.
+fin de l'histoire !
