modification du texte

--- a/history
+++ b/history
@@ -1,1 +1,4 @@
-Il était une fois une fille dans un train qui écoutait de la musique. Tout d'un coup le train s'arrête, la fille se retourne et elle voit une camarade de sa classe, elles n'ont jamais parlé mais en attendant que le train se remette en route, elles commencent à faire connaissance, sans savoir une grande amitié allait nâitre.
+Il était une fois une fille dans un train qui écoutait de la musique. Tout d'un coup le train s'arrête, la fille se retourne et elle voit une camarade de sa classe, elles n'ont jamais parlé mais en attendant que le train se remette en route,
+elles commencent à faire connaissance, sans savoir une grande amitié allait nâitre.
+Elle s'appelait Marguerite, elle vie pas trés loin de la gare d'ou elle embarque. Elle n'était pas de la région, elle habité avant en campagne donc
+elle est assez paniqué du fait que le train s'arrete ainsi. 
